--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.2",
     "axios": "^0.26.1",
+    "qr-scanner": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
